chore(env): add DATABASE_URL to environment variables
- Added DATABASE_URL to .env for PostgreSQL connection
- Configured SSL mode and channel binding parameters for secure access

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GEMINI_API_KEY=AIzaSyDVgWqq-vVL40aEyu-VxduwP_pSTJYSV74
+DATABASE_URL=postgresql://neondb_owner:npg_Dv5ymIAUaq6o@ep-lucky-bonus-ag03mda3-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
